tests/language_modules/08_routines/invalid_semantics/duplicate_parameter_name.vf
module DuplicateParameterName

function combine(item: Integer, item: Integer) returns Integer
is
    return item
end combine

end DuplicateParameterName